<resources>
    <string name="app_name">NUMAD21Fa-SihengWei</string>
    <string name="convert_string">Convert</string>
    <string name="dollars_hint">dollars</string>
    <string name="no_value_string">No Value</string>
    <string name="about_string">About</string>
    <string name="cliky_clicky">Cliky Clicky</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="pressed_a">Pressed: A</string>
    <string name="pressed_b">Pressed: B</string>
    <string name="pressed_c">Pressed: C</string>
    <string name="pressed_d">Pressed: D</string>
    <string name="pressed_e">Pressed: E</string>
    <string name="pressed_f">Pressed: F</string>
    <string name="pressed">Pressed: -</string>
    <string name="title_activity_recycler_view">RecyclerViewActivity</string>

    <string name="add_link">Add Link</string>
    <string name="link_url">LinkUrl</string>
    <string name="link_name">LinkName</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="link_collector">Link Collector</string>
    <string name="locator">Locator</string>
    <string name="show_location">Show Location</string>
    <string name="service">Service</string>
    <string name="request">Request</string>
    <string name="city_name">City Name</string>
    <string name="weather_forcast">Weather Forecast</string>
    <string name="weather_picture">weather picture</string>
</resources>